# orchestration

./: .gitignore  README.md  RUNNING.md  comparison.md  observability.md  pyproject.toml
airflow/: dag1_csv_etl.py  dag2_api_fanout.py  dag3_payment.py  dag4_order_fulfillment.py
airflow/triggers/: approval_trigger.py  fetch_callback_trigger.py
argo/: dag1-csv-etl.yaml  dag2-api-fanout.yaml  dag3-payment.yaml  dag4-order-fulfillment.yaml
argo/scripts/: call_shipping_api.py  handle_payment_failure.py  process_payment.py  release_inventory.py  reserve_inventory.py  send_order_notification.py  send_payment_notification.py  (+4 more)
dagster/: dag1_csv_etl.py  dag2_api_fanout.py  dag3_payment.py  dag4_order_fulfillment.py  repository.py  resources.py  sensors.py
flyte/: dag1_csv_etl.py  dag2_api_fanout.py  dag3_payment.py  dag4_order_fulfillment.py  types.py
google-workflows/: dag1_csv_etl.yaml  dag2_api_fanout.yaml  dag3_payment.yaml  dag4_order_fulfillment.yaml
hatchet/: Dockerfile  dag1_csv_etl.py  dag2_api_fanout.py  dag3_payment.py  dag4_order_fulfillment.py  worker.py
kestra/: dag1_csv_etl.yaml  dag2_api_fanout.yaml  dag3_payment.yaml  dag4_order_fulfillment.yaml
luigi/: dag1_csv_etl.py  dag2_api_fanout.py  dag3_payment.py  dag4_order_fulfillment.py
prefect/: dag1_csv_etl.py  dag2_api_fanout.py  dag3_payment.py  dag4_order_fulfillment.py
shared-services/: docker-compose.yml  init-db.sql  init-engines.sql
temporal/: Dockerfile  activities.py  dag1_csv_etl.py  dag2_api_fanout.py  dag3_payment.py  dag4_order_fulfillment.py  signal_server.py  worker.py
(+43 files in other folders)
