[project]
name = "orchestration"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "apache-airflow>=3.2.1",
    "dagster>=1.13.5",
    "dagster-webserver>=1.13.5",
    "prefect>=3.7.1",
    "luigi>=3.5",
    "temporalio>=1.7",
    "hatchet-sdk>=1.0",
    # shared runtime deps for the host-run Temporal/Hatchet workers + signal server
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "psycopg[binary]>=3.1",
    "pyarrow>=16",
]
